@@ -9,6 +9,7 @@ A1\t[:function,"INDIRECT", [:string,"$A$5"]]
 A2\t[:function,"INDIRECT", [:cell,"$A$5"]]
 A3\t[:function, "SUM", [:function, "INDIRECT", [:string, "$A$5:$B$10"]]]
 A4\t[:function, "IFERROR", [:function, "INDEX", [:function, "INDIRECT", [:error, "#VALUE!"]], [:constant, "C3545"]], [:number, "3"]]
+A5\t[:function,"INDIRECT", [:string,"$A$5"], [:boolean_true]]
 END
 
 expected_output = <<END
@@ -16,6 +17,7 @@ A1\t[:cell, "$A$5"]
 A2\t[:function, "INDIRECT", [:cell, "$A$5"]]
 A3\t[:function, "SUM", [:area, "$A$5", "$B$10"]]
 A4\t[:function, "IFERROR", [:function, "INDEX", [:error, "#VALUE!"], [:constant, "C3545"]], [:number, "3"]]
+A5\t[:cell, "$A$5"]
 END
     
 input = StringIO.new(input)
